--- a/search.ipynb
+++ b/search.ipynb
@@ -14,12 +14,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "transcripts = \"transcripts\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# \n",
+    "def readFiles(path):\n",
+    "    files = [path+\"/\"+f for f in os.listdir(path) ]\n",
+    "    fileText = []\n",
+    "    for f in files:\n",
+    "        fileText.append(open(f).read())\n",
+    "    return (files, fileText)\n",
+    "(fileList, fileTexts)=readFiles(\"transcripts\")"
+   ]
   }
  ],
  "metadata": {
